# Capstone_Project

./: .gitignore  AUTHENTICATION.md  README.md  db.sqlite3  manage.py  pyproject.toml  usage.md
api/: models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_groups_remove_user_groups_and_more.py  0002_remove_user_groups_remove_user_user_permissions_and_more.py  0003_alter_joinrequest_unique_together.py  0003_initial.py  0004_usertasks_completed_at.py
task_management_api/: Procfile  asgi.py  settings.py  urls.py  wsgi.py
